Handle RGB video correctly.

Turns out that when a video is tagged as RGB,
they really mean that the Y channel contains green,
Cr contains red, and Cb contains blue.
(According to ISO 23001-8:2016)

Bug: 901664
Change-Id: I468327252389dc2468020f23a912129fdc55574a
Reviewed-on: https://chromium-review.googlesource.com/c/1321582
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607442}
Former-commit-id: feeeabcd597dd1201294fca43f5e98ddca79fa04